--- a/css/husai.css
+++ b/css/husai.css
@@ -174,3 +174,42 @@
 .border-botton-yellow{
     border-bottom: 2px solid #F0E738;
 }
+
+.user-header{
+    width: 326px;
+    height: 220px;
+    -webkit-box-shadow: 0 9px 18px rgb(0 0 0 / 8%);
+    box-shadow: 0 3px 27px rgba(171, 69, 152, 0.333);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.user-info{
+    background: #fff;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 9px 18px rgb(0 0 0 / 8%);
+    box-shadow: 0 3px 27px rgb(0 0 0 / 7%);
+    padding: 20px 20px;
+}
+
+.btn-profile{
+    width: 130px;
+    height: 40px;
+    border: 0;
+    background: #F0E738;
+    color: #93278F;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    line-height: 40px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 50px;
+    font-size: 13px;
+    margin: 0 15px;
+    padding: 10px;
+}
+.btn-profile:hover{
+    text-decoration: none;
+    color: #495057;
+}
